[package]
name = "klomang-node"
version = "0.1.0"
edition = "2024"

[dependencies]
klomang-core = { git = "https://github.com/biotalaut-it/klomang-core", branch = "main" }

# Node runtime dependencies
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
clap = { version = "4", features = ["derive"] }
rocksdb = "0.21.0"
bincode = "1.3"
num_cpus = "1.17.0"
lru = "0.12"
blake3 = "1.5"
tempfile = "3.8"

# Networking dependencies
libp2p = { version = "0.51.4", features = ["quic", "tcp", "noise", "yamux", "ed25519", "identify", "ping", "tokio", "kad", "gossipsub", "request-response", "autonat", "relay", "macros", "websocket"] }
libp2p-quic = "0.7.0-alpha.3"
libp2p-tcp = "0.39.0"
libp2p-websocket = "0.41.0"
async-trait = "0.1"
either = "1.9"
bytes = "1.4"
tokio-util = { version = "0.7", features = ["codec"] }
void = "1"

# RPC dependencies
warp = "0.3"
serde_json = "1.0"
hex = "0.4"
sysinfo = "0.29"
